service.yaml
apiVersion: v1
kind: Service
metadata:
  name: artifact-ui
spec:
  selector:
    app: artifact-ui
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
  type: NodePort
