ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: artifact-ui
spec:
  ingressClassName: nginx
  rules:
    - host: artifact.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: artifact-ui
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: artifact-server
                port:
                  number: 9080
